<resources>
    <string name="app_name">Task1</string>

    <string name="btn_register">Register</string>
    <string name="hint_et_username">User Name</string>
    <string name="hint_et_pass">Password</string>

    <string name="btn_login">Sign In</string>
    <string name="label_register_activity">Registration</string>

    <string name="tv_register"> Create one</string>


    <string name="log_out">log out</string>
    <string name="username_empty_error">username is empty</string>
    <string name="password_not_valid_error">password should have at least 8 cahrs and most 12 chars, have 1 small char , 1 capital char, 1 number</string>
    <string name="user_exist_error">User already exist</string>
    <string name="user_name_label">user name :</string>
    <string name="password_label">password :</string>
    <string name="login_label">Login</string>
    <string name="register_label">Register</string>
    <string name="no_account_yet_label">No account yet? </string>
    <string name="wrong_password_error">wrong password</string>
    <string name="wrong_user_name_error">wrong username</string>


    <string name="facebook_app_id" translatable="false">338507363775549</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb338507363775549</string>
    <string name="email_label">Email : </string>
    <string name="hint_et_email">Email</string>
    <string name="hint_et_phone">Phone</string>
    <string name="hint_et_address">Address</string>
    <string name="hint_et_gender">Gender</string>
    <string name="tv_restore">Forgot password ?</string>
    <string name="btn_restore">restore password</string>
    <string name="home_nav_menu_lable">Home</string>
    <string name="orders_nav_menu_lable">Orders</string>
    <string name="wish_list_nav_menu_lable">Wish List</string>
    <string name="payment_nav_menu_lable">Payment</string>
    <string name="settings_nav_menu_lable">Settings</string>
    <string name="about_us_nav_menu_lable">About Us</string>
    <string name="contact_us_nav_menu_lable">Contact Us</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_nav_menu_lable">Profile</string>
    <string name="email_empty_error">Email is Empty</string>
    <string name="phone_empty_error">Phone is empty</string>
    <string name="address_empty_error">Address is empty</string>
    <string name="gender_empty_error">Gender is empty</string>
    <string name="hint_et_code">Code</string>
    <string name="hint_et_new_pass">New Password</string>
    <string name="token_empty_error">token is empty</string>
    <string name="password_empty_error">password is empty</string>
    <string name="invalid_username_password">username or password are incorrect</string>
    <string name="edit_label">Edit</string>
    <string name="btn_save">save</string>
    <string name="btn_edit">Edit</string>
    <string name="code_sent">Code have been sent to email</string>
    <string name="seller_btn_text">Seller</string>
    <string name="customer_btn_text">Customer</string>
    <string name="seller_register_label">Seller Register</string>
    <string name="customer_register_label">Customer Register</string>

    <string-array name="gender_array">

        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>
